# flip-flop-protocol

./: Cargo.toml  README.md  flip-flop-protocol.code-workspace  offset-rules.md
.github/workflows/: test.yml
app/: Cargo.toml
app/examples/: README.md
app/examples/client/: main.rs
app/examples/common/: lib.rs
app/examples/server/: main.rs
app/src/: lib.rs
data/: Cargo.toml  README.md
data/examples/discovery/: main.rs
data/examples/discovery_analysis/: README.md  main.rs
data/examples/update/: main.rs
data/src/: discovery.rs  lib.rs  update.rs
