[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "flip-flop-app"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.126", default-features = false }

[dev-dependencies]
bytes = "1"
postcard = "0.7.0"
tokio = { version = "1", features = ["full", "tracing"] }