[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "flip-flop-app"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", default-features = false }

[dev-dependencies]
chrono = "0.4"
circular-queue = "0.2"
postcard = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full", "tracing"] }
