[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "flip-flop-data"
version = "0.1.0"

[dependencies]
aead = { version = "0.5", default-features = false }
defmt = { version = "0.3", optional = true }
heapless = "0.7"
postcard = "1.0"
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
aes = { version = "0.8" }
aead = { version = "0.5", features = ["dev"], default-features = false }
ccm = { version = "0.5", default-features = false, features = ["heapless"] }
futures = "0.3"
rand = "0.8"
semver = { version = "1.0.14", default-features = false }
tokio = { version = "1", features = ["full"] }

[features]
defmt = ["dep:defmt"]
